<resources>
    <string name="app_name">Getter Upper</string>
    <string name="action_settings">Settings</string>
    <string name="delete_menu">Delete</string>
    <string name="edit_menu">Edit</string>
    <string name="save">Save</string>
    <string name="clear_data">Clear Data</string>
    <string name="snooze">Snooze</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_alarm_checkbox">One time?</string>
    <string name="repeating_alarm">Repeating</string>
    <string name="onetime_alarm">One Time</string>
    <string name="pref_header_alarms">Alarms</string>
    <string-array name="pref_snooze_times">
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string name="pref_snooze_default">5 minutes</string>
    <string name="pref_title_snooze">Snooze Time</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_data">Data</string>
    <string name="pref_title_data_clear">Clear Data</string>
    <string name="title_activity_usage">UsageActivity</string>
    <string name="title_activity_third_party">ThirdPartyActivity</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="title_activity_policy">PolicyActivity</string>
    <string name="pref_header_general">About</string>
    <string name="pref_title_usage">FAQ</string>
    <string name="pref_title_third_party">Third-party Software</string>
    <string name="pref_title_terms_and_conditions">Terms and Conditions</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="title_one">How do I delete an alarm?</string>
    <string name="title_two">How do I edit an alarm?</string>
    <string name="title_three">Does the particular QR Code generated have to be used?</string>
    <string name="title_four">What should I do if I do not have my QR Code around me?</string>
    <string name="title_five">Do you store any information about me?</string>
    <string name="title_six">Why are my alarms not working?</string>
    <string name="title_seven">Miscellaneous</string>
    <string name="answer_one">Long press onto the desired alarm until it is selected. Press the garbage can icon on the menu to delete. You can also long press on multiple alarms at once to select more than one.</string>
    <string name="answer_two">Long press onto the desired alarm until it is selected. Press the pencil icon on the menu and select your changes.</string>
    <string name="answer_three">No, scanning any QR code will turn the alarm off.</string>
    <string name="answer_four">If you do not have the QR code close by, you can terminate the application to stop the alarm. You can also open up a picture of any QR code online and scan that to turn the alarm off.</string>
    <string name="answer_five">This is purely an offline application, with no external servers maintaining data about our users. We simply cache alarm data and we do not share this with any other service or company.</string>
    <string name="answer_six">In the case that your alarms are not working, look into your phones application settings and ensure that you are providing Getter Upper all of the proper permissions. If this does not solve your issue, try to reinstall the application.</string>
    <string name="answer_seven">Refer to the alarm settings page for customization.</string>
    <string name="third_title_one">GSON</string>
    <string name="third_title_two">QRGenearator</string>
    <string name="third_title_three">MobileVisionBarcodeScanner</string>
    <string name="third_desc_one">https://github.com/google/gson \n\n

Gson is released under the Apache 2.0 license.
Copyright 2008 Google Inc.\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

    \thttp://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="third_desc_two">https://github.com/androidmads/QRGenerator\n\n

The MIT License (MIT)\n\n

Copyright © 2016 AndroidMad / Mushtaq M A\n\n

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\n

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\n

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
</string>
    <string name="third_desc_three">https://github.com/KingsMentor/MobileVisionBarcodeScanner \n\n

MIT License \n\n

Copyright © 2016 Nosakhare Belvi\n\n

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\n

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\n

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
</string>
</resources>