<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <ListPreference
        android:key="alarm_snooze_time"
        android:title="@string/pref_title_snooze"
        android:dialogTitle="@string/pref_title_snooze"
        android:entries="@array/pref_snooze_times"
        android:entryValues="@array/pref_snooze_times"
        android:defaultValue="@string/pref_snooze_default" />

    <!-- Allows the user to choose a ringtone in the 'alarm' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:key="alarm_ringtone"
        android:ringtoneType="alarm"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="alarm_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
