<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="@string/pref_title_usage">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ca.wlu.tbertiean.qralarm"
            android:targetClass="ca.wlu.tbertiean.qralarm.Activities.Settings.UsageActivity" />
    </Preference>

    <Preference android:title="@string/pref_title_third_party">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ca.wlu.tbertiean.qralarm"
            android:targetClass="ca.wlu.tbertiean.qralarm.Activities.Settings.ThirdPartyActivity" />
    </Preference>

    <Preference android:title="@string/pref_title_terms_and_conditions">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ca.wlu.tbertiean.qralarm"
            android:targetClass="ca.wlu.tbertiean.qralarm.Activities.Settings.TermsActivity" />
    </Preference>

    <Preference android:title="@string/pref_title_privacy_policy">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ca.wlu.tbertiean.qralarm"
            android:targetClass="ca.wlu.tbertiean.qralarm.Activities.Settings.PolicyActivity" />
    </Preference>

</PreferenceScreen>
