<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.wlu.tbertiean.qralarm.Activities.Settings.ThirdPartyActivity"
    tools:showIn="@layout/activity_third_party">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/third_title_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_title_one"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/third_desc_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/third_desc_one"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/third_title_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_title_two"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/third_desc_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/third_desc_two"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/third_title_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_title_three"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/third_desc_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/third_desc_three"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>

