<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ca.wlu.tbertiean.qralarm.Activities.Settings.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ca.wlu.tbertiean.qralarm.Activities.Settings.SettingsActivity$AlarmPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_alarms" />

    <header
        android:fragment="ca.wlu.tbertiean.qralarm.Activities.Settings.SettingsActivity$DataPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data" />

</preference-headers>
