<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.wlu.tbertiean.qralarm.Activities.AlarmListActivity" >

    <item android:id="@+id/settingsMenu"
        android:title="@string/action_settings"
        android:icon="@mipmap/settings"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item android:id="@+id/deleteMenu"
        android:title="@string/delete_menu"
        android:orderInCategory="0"
        android:icon="@mipmap/delete_alarm"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/editMenu"
        android:title="@string/edit_menu"
        android:orderInCategory="0"
        android:icon="@mipmap/edit"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>
